kubernetes/applications/infra/tailscale/app/namespace.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: infra-tailscale
  labels:
    # Allows the operator and its proxy pods to bypass strict isolation
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
