kubernetes/applications/infra/tailscale/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-private
  annotations:
    tailscale.com/expose: "true" # Expose this gateway to your Tailnet
    tailscale.com/hostname: "homelab-private-gateway"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/hostname: "private.${CLUSTER_DOMAIN}, *.private.${CLUSTER_DOMAIN}" # ExternalDNS configuration to push records automatically to Cloudflare
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    gateway.networking.k8s.io/gateway-name: private
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
