kubernetes/applications/infra/tailscale/app/gateway.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  annotations:
    io.cilium/gateway-service-type: "HostNetwork"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "${CLUSTER_LB_PRV_GATEWAY_API}"
  infrastructure:
    annotations:
      tailscale.com/expose: "true"
      tailscale.com/hostname: "homelab-private-gateway"
      external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
      external-dns.alpha.kubernetes.io/hostname: "private.${CLUSTER_DOMAIN}, *.private.${CLUSTER_DOMAIN}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.private.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.private.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: private-wildcard-tls
            namespace: infra-certmanager
