kubernetes/applications/infra/tailscale/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-private-http-redirect
  namespace: infra-tailscale
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.private.${CLUSTER_DOMAIN}" 
    external-dns.alpha.kubernetes.io/endpoints-type: Gateway
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: private
      namespace: infra-tailscale
      sectionName: http
  hostnames:
    - "*.private.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301 # Permanent Redirect
